feat: recipes, fix broken packets, inventory wip